--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sy-plugin-template-vite",
-  "version": "1.0.0",
+  "name": "plugin-sample-vite-svelte",
+  "version": "0.0.1",
   "type": "module",
   "description": "",
   "repository": "",
@@ -9,8 +9,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "dev": "vite build --watch",
-    "build": "vite build",
-    "start": "vite preview"
+    "build": "vite build"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.3",
