--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,10 +36,10 @@
             "vite/client",
             "svelte"
         ],
-        "baseUrl": "./src",
+        // "baseUrl": "./src",
         "paths": {
-            "@/*": ["*"],
-            "@/libs/*": ["libs/*"],
+            "@/*": ["./src/*"],
+            "@/libs/*": ["./src/libs/*"],
         }
     },
     "include": [
