--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "plugin-sample-vite-svelte",
-  "version": "0.2.3",
+  "version": "0.2.6",
   "type": "module",
-  "description": "",
+  "description": "This is a sample plugin based on vite and svelte for Siyuan (https://b3log.org/siyuan)",
   "repository": "",
   "homepage": "",
   "author": "",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "scripts": {
     "make-link": "node  --no-warnings ./scripts/make_dev_link.js",
     "dev": "vite build --watch",
@@ -22,7 +22,7 @@
     "minimist": "^1.2.8",
     "rollup-plugin-livereload": "^2.0.5",
     "sass": "^1.62.1",
-    "siyuan": "0.8.3",
+    "siyuan": "0.8.7",
     "svelte": "^3.57.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4",
