--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "plugin-sample-vite-svelte",
-  "version": "0.3.2",
+  "version": "0.3.5",
   "type": "module",
   "description": "This is a sample plugin based on vite and svelte for Siyuan (https://b3log.org/siyuan)",
   "repository": "",
   "homepage": "",
-  "author": "",
+  "author": "frostime",
   "license": "MIT",
   "scripts": {
     "make-link": "node  --no-warnings ./scripts/make_dev_link.js",
@@ -23,7 +23,7 @@
     "minimist": "^1.2.8",
     "rollup-plugin-livereload": "^2.0.5",
     "sass": "^1.63.3",
-    "siyuan": "0.9.7",
+    "siyuan": "0.9.8",
     "svelte": "^4.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
