🔨 refactor: 创建 dir 符号链接；并编写 ps 脚本用于获取 windows 管理员权限
https://github.com/siyuan-note/siyuan/issues/12399

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "author": "frostime",
   "license": "MIT",
   "scripts": {
-    "make-link": "node  --no-warnings ./scripts/make_dev_link.js",
+    "make-link": "node --no-warnings ./scripts/make_dev_link.js",
+    "make-link-win": "powershell.exe -NoProfile -ExecutionPolicy Bypass -File ./scripts/elevate.ps1 -scriptPath ./scripts/make_dev_link.js",
     "dev": "vite build --watch",
     "build": "vite build",
     "make-install": "vite build && node --no-warnings ./scripts/make_install.js"
