🔧 ci: tsconfig, include svelte

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,8 @@
         "src/**/*.ts",
         "src/**/*.d.ts",
         "src/**/*.tsx",
-        "src/**/*.vue"
+        "src/**/*.vue",
+        "src/**/*.svelte"
     ],
     "references": [
         {
